GNOME Bugzilla – Bug 715039
rtpjitterbuffer: Fix inconsistency in waking up
Last modified: 2013-11-25 15:05:24 UTC
When the jitterbuffer is in slave mode, the src pad task can sometimes run out of buffers. Once that happens, the task waits for new events, but never gets woken up until a lost buffer timeout occurs. The jitterbuffer can enter a state of not setting up a dropped buffer timeout while still waiting for new buffers. This change wakes up the src pad task regardless of wait reason once a new buffer arrives on the sink pad.
Created attachment 261269 [details] [review] [PATCH] rtp: jitterbuffer: Fix inconsistency in waking up When the jitterbuffer is in slave mode, the src pad task can sometimes run out of buffers. Once that happens, the task waits for new events, but never gets woken up until a lost buffer timeout occurs. The jitterbuffer can enter a state of not setting up a dropped buffer timeout while still waiting for new buffers. This change wakes up the src pad task regardless of wait reason once a new buffer arrives on the sink pad. --- gst/rtpmanager/gstrtpjitterbuffer.c | 2 +- 1 file changed, 1 insertion(+), 1 deletion(-)
That's fixed already: http://cgit.freedesktop.org/gstreamer/gst-plugins-good/commit/?id=901ec6346288a3c4cfe89804c5fc6643a66326c4
(fwiw, I pushed the fix I had pending locally since yours wasn't quite right and someone had spotted this on irc a few days ago already, I just hadn't pushed it yet because I was meaning to write a unit test for it as well.)