rtpjitterbuffer: fix wake-up when new buffers come in after running empty

Spotted by 'gratias' on IRC. Probably introduced in recent refactoring.

https://bugzilla.gnome.org/show_bug.cgi?id=715039